--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <h3>Hi, i am Md Abdullah</h3>
         <span>front-end developer</span>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet porro facere expedita ab atque a consectetur odit vel soluta itaque.</p>
-        <a href="#" class="btn"> about me <i class="fas fa-user"></i> </a>
+        <a href="about.html" class="btn"> about me <i class="fas fa-user"></i> </a>
     </div>
 
 </section>
