--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <section class="home">
 
     <div class="image">
-        <img src="images/kafi.webp" alt="">
+        <img src="images/kafi.png" alt="">
     </div>
 
     <div class="content">
