add social link

--- a/contact.html
+++ b/contact.html
@@ -46,34 +46,35 @@
             <div class="box">
                 <i class="fas fa-map"></i>
                 <div class="info">
-                    <h3>address :</h3>
-                    <p>Dhaka,Bangladesh</p>
+                    <h3>Address :</h3>
+                    <p>Nodda, Gulshan, Dhaka-1212,Bangladesh</p>
                 </div>
             </div>
 
             <div class="box">
                 <i class="fas fa-envelope"></i>
                 <div class="info">
-                    <h3>email :</h3>
-                    <p>mktonmoy403@gmail.com</p>
+                    <h3>Email :</h3>
+                    <a href="mailto:abdullahkafi996@gmail.com"><p>abdullahkafi996@gmail.com</p></a>
                 </div>
             </div>
 
             <div class="box">
                 <i class="fas fa-phone"></i>
                 <div class="info">
-                    <h3>number :</h3>
-                    <p>+123-456-7890</p>
+                    <h3>Phone :</h3>
+                    <a href="tel:01982541344"><p>+8801982541344</p></a>
                 </div>
             </div>
 
         </div>
 
         <div class="share">
-            <a href="#" class="fab fa-facebook-f"></a>
-            <a href="#" class="fab fa-twitter"></a>
-            <a href="#" class="fab fa-instagram"></a>
-            <a href="#" class="fab fa-linkedin"></a>
+            <a href="https://www.facebook.com/kafiabdullah27/" class="fab fa-facebook-f"></a>
+            <a href="https://www.linkedin.com/in/md-abdullah-b344ab137/" class="fab fa-linkedin"></a>
+            <a href="https://github.com/kafiabdullah" class="fab fa-github"></a>
+            <a href="https://www.instagram.com/kafiabdullah27/" class="fab fa-instagram"></a>
+
         </div>
 
     </div>
