add about me description

--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
     <div class="content">
         <h3>Hi, i am Md Abdullah</h3>
         <span>front-end developer</span>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet porro facere expedita ab atque a consectetur odit vel soluta itaque.</p>
+        <p>Hello! I am Md Abdullah, a passionate Frontend Web Developer. Looking for a challenging and rewarding position in a
+        reputed organization with potential advancement opportunities that will allow me to utilize and enhance my professional
+        skills and abilities . I enjoy turning complex problems into simple, beautiful and intuitive designs. My job is to build
+        website so that it is functional and user-friendly but at the same time attractive. Moreover, I add personal touch to
+        product and make sure that is eye-catching and easy to use.</p>
         <a href="about.html" class="btn"> about me <i class="fas fa-user"></i> </a>
     </div>
 
