add skill with logo

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <section class="home">
 
     <div class="image">
-        <img src="images/kafi.png" alt="">
+        <img src="images/kafi.jpg" alt="">
     </div>
 
     <div class="content">
@@ -40,9 +40,9 @@
         <span>front-end developer</span>
         <p>Hello! I am Md Abdullah, a passionate Frontend Web Developer. Looking for a challenging and rewarding position in a
         reputed organization with potential advancement opportunities that will allow me to utilize and enhance my professional
-        skills and abilities . I enjoy turning complex problems into simple, beautiful and intuitive designs. My job is to build
-        website so that it is functional and user-friendly but at the same time attractive. Moreover, I add personal touch to
-        product and make sure that is eye-catching and easy to use.</p>
+        skills and abilities. I enjoy turning complex problems into simple, beautiful, and intuitive designs. My job is to build
+        website so that it is functional and user-friendly but at the same time attractive. Moreover, I add a personal touch to
+        the product and make sure that is eye-catching and easy to use.</p>
         <a href="about.html" class="btn"> about me <i class="fas fa-user"></i> </a>
     </div>
 
