--- a/about.html
+++ b/about.html
@@ -112,6 +112,10 @@
                 <h3>css 3</h3>
             </div>
             <div class="box">
+                <img src="images/Bootstrap.png">
+                <h3>Bootstrap 5</h3>
+            </div>
+            <div class="box">
                 <img src="images/icon-3.png">
                 <h3>javascript ES6</h3>
             </div>
@@ -122,14 +126,28 @@
             <div class="box">
                 <img src="images/icon-5.png">
                 <h3>jquery</h3>
-            </div>
-            <div class="box">
+            </div><div class="box">
                 <img src="images/icon-6.png">
                 <h3>react.js</h3>
+            </div><div class="box">
+                <img src="images/material-ui.png">
+                <h3>Material UI</h3>
+            </div>
+            <div class="box">
+                <img src="images/firebase.png">
+                <h3>Firebase</h3>
             </div>
             <div class="box">
                 <img src="images/wordpress.png">
                 <h3>WordPress</h3>
+            </div>
+            <div class="box">
+                <img src="images/elementor.png">
+                <h3>Elementor</h3>
+            </div>
+            <div class="box">
+                <img src="images/divi.png">
+                <h3>Divi</h3>
             </div>
         </div>
 
