add about us information

--- a/about.html
+++ b/about.html
@@ -74,17 +74,17 @@
                 </div>
 
                 <div class="box">
-                    <h3>450+</h3>
+                    <h3>10+</h3>
                     <p>happy clients</p>
                 </div>
 
                 <div class="box">
-                    <h3>390+</h3>
+                    <h3>30+</h3>
                     <p>project completed</p>
                 </div>
 
                 <div class="box">
-                    <h3>10+</h3>
+                    <h3>2+</h3>
                     <p>awards won</p>
                 </div>
 
@@ -126,12 +126,10 @@
             <div class="box">
                 <img src="images/icon-5.png">
                 <h3>jquery</h3>
-            </div><div class="box">
+            </div>
+            <div class="box">
                 <img src="images/icon-6.png">
                 <h3>react.js</h3>
-            </div><div class="box">
-                <img src="images/material-ui.png">
-                <h3>Material UI</h3>
             </div>
             <div class="box">
                 <img src="images/firebase.png">
@@ -148,6 +146,10 @@
             <div class="box">
                 <img src="images/divi.png">
                 <h3>Divi</h3>
+            </div>
+            <div class="box">
+                <img src="images/Squarespace_Logo.png">
+                <h3>Squarespace</h3>
             </div>
         </div>
 
