add work experience on about us

--- a/about.html
+++ b/about.html
@@ -167,54 +167,53 @@
 
             <div class="box">
                 <i class="fas fa-graduation-cap"></i>
-                <span>October 2019 - January 2020</span>
-                <h3>Intern - Web Developer</h3>
-                <h4>Shikhbe Shobai</h4>
+                <span>October 2021 - Present</span>
+                <h3>Web Developer</h3>
+                <h4>bdCalling IT Ltd.</h4>
                 <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem perspiciatis doloribus aut
-                    doloremque, odit, saepe in nesciunt et error distinctio, maiores aperiam? Hic corrupti et nesciunt
-                    dolorum id reiciendis ut.
+                    bdCalling – A one-stop solution for all types of Website Design, Development, Graphic Design, Admin Support, Sales &
+                    Marketing support projects. <br>
+                    <strong>My Primary Responsibilities are:</strong> <br>
+                    * Design WordPress site Using Elementor, DiVi Page Builder. <br>
+                    * Design WooCommerce Website with payment Functionality. <br>
+                    * Design Squarespace Website <br>
+                    * On Page SEO
+
                 </p>
             </div>
 
-            <div class="box">
-                <i class="fas fa-graduation-cap"></i>
-                <span>2016 - 2017</span>
-                <h3>front-end development</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia explicabo magni est quo vitae quis
-                    veritatis fugiat optio placeat enim!</p>
-            </div>
+
 
             <div class="box">
                 <i class="fas fa-graduation-cap"></i>
                 <span>2017 - 2018</span>
-                <h3>front-end development</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia explicabo magni est quo vitae quis
-                    veritatis fugiat optio placeat enim!</p>
+                <h3> Intern front-end development</h3>
+                <h4>Shikhbe Shobai</h4>
+                <p>Shikhbe Shobai is a freelance-based IT training center. Here I'm trained in web design and do intern. <br>
+                    <strong>Work Stack:</strong>
+                    * PSD To HTML
+                    * Site Redesign
+                    * Responsive Website
+                    * Website Design From Scratch
+                    * HTML & WordPress Site Bug Fixing
+                </p>
+            </div>
+
+
+            <div class="box">
+                <i class="fas fa-graduation-cap"></i>
+                <span>September 2016 - July 2021</span>
+                <h3>Bsc in Computer Science and Engineering</h3>
+                <h4>Southeast University, Dhaka, Bangladesh</h4>
+                <p>I'm completing my Bachelor's Degree from Southeast University.</p>
             </div>
 
             <div class="box">
                 <i class="fas fa-graduation-cap"></i>
-                <span>2018 - 2019</span>
-                <h3>front-end development</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia explicabo magni est quo vitae quis
-                    veritatis fugiat optio placeat enim!</p>
-            </div>
-
-            <div class="box">
-                <i class="fas fa-graduation-cap"></i>
-                <span>2019 - 2020</span>
-                <h3>front-end development</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia explicabo magni est quo vitae quis
-                    veritatis fugiat optio placeat enim!</p>
-            </div>
-
-            <div class="box">
-                <i class="fas fa-graduation-cap"></i>
-                <span>2020 - 2021</span>
-                <h3>front-end development</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia explicabo magni est quo vitae quis
-                    veritatis fugiat optio placeat enim!</p>
+                <span>June 2013 - August 2015</span>
+                <h3>Higher Secondary School Certificate (HSC)</h3>
+                <h4>Govt. Science Collage, Dhaka, Bangladesh</h4>
+                <p>I'm complete my Higher Secondary School Certificate (HSC) from Govt. Science Collage.</p>
             </div>
 
         </div>
