add project on portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,58 +36,51 @@
     <div class="box-container">
 
         <div class="box">
-            <img src="images/img-1.jpg" alt="">
+            <img src="images/cuda.png" alt="cuda">
             <div class="content">
-                <h3>project 01</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio, praesentium.</p>
-                <a href="#">read more</a>
+                <h3>PSD Conversion</h3>
+                <p>In this project, I'm converting PSD to HTML, CSS, and Bootstrap responsive websites.</p>
+                <a href="https://kafiabdullah.github.io/Cuda/
+">read more</a>
             </div>
         </div>
 
         <div class="box">
-            <img src="images/img-2.jpg" alt="">
+            <img src="images/greensecrets.png" alt="greensecrets">
             <div class="content">
-                <h3>project 02</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio, praesentium.</p>
-                <a href="#">read more</a>
+                <h3>Greensecrets</h3>
+                <p>It's a WooCommerce website Design with HTML,CSS,BootStrap,Jquary for animation with responsive design</p>
+                <a href="https://kafiabdullah.github.io/greensecrets/">read more</a>
             </div>
         </div>
 
         <div class="box">
-            <img src="images/img-3.jpg" alt="">
+            <img src="images/alpha.png" alt="">
             <div class="content">
-                <h3>project 03</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio, praesentium.</p>
-                <a href="#">read more</a>
+                <h3>Alpha Health Central</h3>
+                <p>Alpha Health central is a Australian Base Health company. I'm Design it using DiVi Theme and DiVi builder</p>
+                <a href="https://alphahealthcentral.com/">read more</a>
             </div>
         </div>
 
         <div class="box">
-            <img src="images/img-4.jpg" alt="">
+            <img src="images/yasmina.png" alt="">
             <div class="content">
-                <h3>project 04</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio, praesentium.</p>
-                <a href="#">read more</a>
+                <h3>Yasmina Fadil</h3>
+                <p>It's Entrepreneur with WooCommerce website design with Astra Theme and Elementor Page Builder</p>
+                <a href="https://www.yasminafadli.com/">read more</a>
             </div>
         </div>
 
         <div class="box">
-            <img src="images/img-5.jpg" alt="">
+            <img src="images/collectorsarsenal.png" alt="">
             <div class="content">
-                <h3>project 05</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio, praesentium.</p>
-                <a href="#">read more</a>
+                <h3>Collectorsarsenal</h3>
+                <p>Gamming WooCommerce Site</p>
+                <a href="https://collectorsarsenal.com/">read more</a>
             </div>
         </div>
 
-        <div class="box">
-            <img src="images/img-6.jpg" alt="">
-            <div class="content">
-                <h3>project 06</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio, praesentium.</p>
-                <a href="#">read more</a>
-            </div>
-        </div>
 
     </div>
 
